[WEEK056] Why the agent dynamic loading is disallowed?